<resources>
    <string name="app_name">DashApp</string>
    <string name="courses">Courses</string>
    <string name="links">Links</string>
    <string name="upload">Upload</string>
    <string name="campaigns">Campaigns</string>
    <string name="profile">Profile</string>
    <string name="dashbard">Dashbard</string>
    <string name="description">Description</string>
    <string name="dashapp_ud83d_udc4b">DashApp 👋</string>
    <string name="view_analytics">View Analytics</string>
    <string name="top_links">Top Links</string>
    <string name="click">Click</string>
    <string name="talk_with_us">Talk with us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all_links">View all links</string>
    <string name="recent_links">Recent Links</string>
</resources>